--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="skill">
                     <div class="tecnologias">
-                     <span >HTML & CSS</span><img class="tecnologias-icons" src="imagenes/html5.svg" alt=""> <img class="tecnologias-icons" src="/imagenes/css3svg.svg" alt="">
+                     <span >HTML & CSS</span><img class="tecnologias-icons" src="imagenes/html5.svg" alt=""> <img class="tecnologias-icons" src="imagenes/css3svg.svg" alt="">
                     </div> 
                     
                 </div>
@@ -141,17 +141,17 @@
                 
                 <div class="skill">
                     <div class="tecnologias">
-                     <span >C Sharp</span> <img class="tecnologias-icons" src="/imagenes/c--4.svg" alt="">
+                     <span >C Sharp</span> <img class="tecnologias-icons" src="imagenes/c--4.svg" alt="">
                     </div> 
                 </div>
                 <div class="skill"> 
                     <div class="tecnologias">
-                     <span >SQL & SQLite</span><img class="tecnologias-icons"src="/imagenes/sqlite.svg" alt="">
+                     <span >SQL & SQLite</span><img class="tecnologias-icons"src="imagenes/sqlite.svg" alt="">
                     </div> 
                 </div>
                 <div class="skill">
                     <div class="tecnologias">
-                     <span >Tailwind CSS</span> <img class="tecnologias-icons"src="/imagenes/tailwindcss.svg" alt="">
+                     <span >Tailwind CSS</span> <img class="tecnologias-icons"src="imagenes/tailwindcss.svg" alt="">
                     </div> 
                 </div>
             </div>
