button descarga cv

--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
    <section id="curriculum" class="curriculum">
      <div class="contenido-seccion">
         <h2>Curriculum</h2>
-        <h3>Estudios</h3>
+        <div class="centro-btn">
+          <a href="/imagenes/MaximoGarmasarVazquez-CV.pdf" download="MaximoGarmasarVazquez-CV.pdf" class="btn"><i class="fa-regular fa-circle-down"></i></a>
+        </div>
+         <h3>Estudios</h3>
         <div class="fila">
             <div class="col izquierda">
                 <div class="item izq">
